--- a/package.json
+++ b/package.json
@@ -9,11 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~51.0.10",
-    "expo-font": "~12.0.6",
+    "@clerk/clerk-expo": "^1.2.0",
+    "dotenv": "^16.4.5",
+    "expo": "~51.0.11",
+    "expo-auth-session": "^5.5.2",
+    "expo-constants": "^16.0.2",
+    "expo-font": "~12.0.7",
     "expo-status-bar": "~1.12.1",
-    "react": "18.2.0",
-    "react-native": "0.74.1"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-native": "^0.74.2",
+    "typescript": "~5.3.3",
+    "@types/react": "~18.2.79",
+    "expo-web-browser": "~13.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
