--- a/package.json
+++ b/package.json
@@ -10,18 +10,22 @@
   },
   "dependencies": {
     "@clerk/clerk-expo": "^1.2.0",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native": "^6.1.17",
+    "@types/react": "~18.2.79",
     "dotenv": "^16.4.5",
     "expo": "~51.0.11",
     "expo-auth-session": "^5.5.2",
     "expo-constants": "^16.0.2",
     "expo-font": "~12.0.7",
     "expo-status-bar": "~1.12.1",
+    "expo-web-browser": "~13.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-native": "^0.74.2",
-    "typescript": "~5.3.3",
-    "@types/react": "~18.2.79",
-    "expo-web-browser": "~13.0.3"
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "typescript": "~5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
