--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/clerk-expo": "^1.2.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.3.29",
     "@types/react": "~18.2.79",
     "dotenv": "^16.4.5",
     "expo": "~51.0.11",
@@ -23,6 +24,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-native": "^0.74.2",
+    "react-native-gesture-handler": "^2.17.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "typescript": "~5.3.3"
