--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "expo-font": "~12.0.7",
     "expo-status-bar": "~1.12.1",
     "expo-web-browser": "~13.0.3",
+    "graphql": "^16.9.0",
+    "graphql-request": "^7.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-native": "^0.74.2",
